--- a/src/components/x/grid.css
+++ b/src/components/x/grid.css
@@ -9,40 +9,40 @@ Created by Andrey Shpigunov on 08.09.2024.
 /* !- Grid prototype */
 
 .grid {
-    display: grid;
-    width: 100%;
-    grid-template-columns: repeat(12, 1fr);
-    
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(12, 1fr);
+  
+  @for $i from 1 to 12 {
+    &.g$(i)  { grid-template-columns: repeat($(i), 1fr) }
+    & .c$(i) { grid-column: span $(i) }
+  }
+  
+  @media (--small) {
     @for $i from 1 to 12 {
-        &.g$(i)  { grid-template-columns: repeat($(i), 1fr) }
-        & .c$(i) { grid-column: span $(i) }
+      &.s\:g$(i) { grid-template-columns: repeat($(i), 1fr) }
+      & .s\:c$(i) { grid-column: span $(i) }
     }
-    
-    @media (--large) {
-        @for $i from 1 to 12 {
-            &.lg\:g$(i) { grid-template-columns: repeat($(i), 1fr) }
-            & .lg\:c$(i) { grid-column: span $(i) }
-        }
+  }
+  
+  @media (--medium) {
+    @for $i from 1 to 12 {
+      &.m\:g$(i) { grid-template-columns: repeat($(i), 1fr) }
+      & .m\:c$(i) { grid-column: span $(i) }
     }
-    
-    @media (--medium) {
-        @for $i from 1 to 12 {
-            &.md\:g$(i) { grid-template-columns: repeat($(i), 1fr) }
-            & .md\:c$(i) { grid-column: span $(i) }
-        }
+  }
+  
+  @media (--large) {
+    @for $i from 1 to 12 {
+      &.l\:g$(i) { grid-template-columns: repeat($(i), 1fr) }
+      & .l\:c$(i) { grid-column: span $(i) }
     }
-    
-    @media (--small) {
-        @for $i from 1 to 12 {
-            &.sm\:g$(i) { grid-template-columns: repeat($(i), 1fr) }
-            & .sm\:c$(i) { grid-column: span $(i) }
-        }
+  }
+  
+  @media (--xlarge) {
+    @for $i from 1 to 12 {
+      &.xl\:g$(i) { grid-template-columns: repeat($(i), 1fr) }
+      & .xl\:c$(i) { grid-column: span $(i) }
     }
-    
-    @media (--xsmall) {
-        @for $i from 1 to 12 {
-            &.xs\:g$(i) { grid-template-columns: repeat($(i), 1fr) }
-            & .xs\:c$(i) { grid-column: span $(i) }
-        }
-    }
+  }
 }
