--- a/src/components/x/modal.css
+++ b/src/components/x/modal.css
@@ -9,46 +9,46 @@ Created by Andrey Shpigunov on 18.09.2024.
 /* Modal windows */
 
 :root {
-    --modal-outer-padding: 50px;
-    --modal-outer-padding-small: 10px;
-    --modal-padding: 50px;
-    --modal-padding-small: 40px 6vw;
-    --modal-background: #fff;
-    --modal-box-shadow: 0 10px 40px #00000044;
-    --modal-border-radius: 12px;
-    --modal-closer-area: 40px;
-    --modal-closer-size: 26px;
-    --modal-closer-width: 2px;
-    --modal-closer-color: #ccc;
-    --modal-closer-color-hover: #f00;
-    --modal-overlay-background-color: #00000066;
+  --modal-outer-padding: 50px;
+  --modal-outer-padding-small: 10px;
+  --modal-padding: 50px;
+  --modal-padding-small: 40px 6vw;
+  --modal-background: #fff;
+  --modal-box-shadow: 0 10px 40px #00000044;
+  --modal-border-radius: 12px;
+  --modal-closer-area: 40px;
+  --modal-closer-size: 26px;
+  --modal-closer-width: 2px;
+  --modal-closer-color: #ccc;
+  --modal-closer-color-hover: #f00;
+  --modal-overlay-background-color: #00000066;
 }
 
 html.modal_active body {
-    overflow: hidden;
+  overflow: hidden;
 }
 
-/* Modal window content */
+/* !- Modal window content */
 .modal-content {
-    display: none;
+  display: none;
 }
 
-/* Main div */
+/* !- Modal wrapper */
 .modal {
-    position: fixed;
-    z-index: -10000;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 0;
-    pointer-events: none;
-    display: none;
+  position: fixed;
+  z-index: -10000;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 0;
+  pointer-events: none;
+  display: none;
 }
 .modal_ready {
-    z-index: 10000;
-    pointer-events: all;
-    display: block;
+  z-index: 10000;
+  pointer-events: all;
+  display: block;
 }
 .modal_z1  { z-index: 10001 }
 .modal_z2  { z-index: 10002 }
@@ -61,213 +61,214 @@ html.modal_active body {
 .modal_z9  { z-index: 10009 }
 .modal_z10 { z-index: 10010 }
 
-/* Overlay */
+/* !- Overlay */
 .modal-overlay {
-    position: absolute;
-    z-index: 10010;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: var(--modal-overlay-background-color);
+  position: absolute;
+  z-index: 10010;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: var(--modal-overlay-background-color);
 }
 
-/* Main structure */
+/* ! -Main structure */
 .modal-outer {
-    position: relative;
-    z-index: 10020;
-    width: 100%;
-    height: 100%;
+  position: relative;
+  z-index: 10020;
+  width: 100%;
+  height: 100%;
+  padding: var(--modal-outer-padding-small);
+  overflow: auto;
+  overscroll-behavior: contain;
+  -webkit-overflow-scrolling: touch;
+  
+  @media (--medium) {
     padding: var(--modal-outer-padding);
-    overflow: auto;
-    overscroll-behavior: contain;
-    -webkit-overflow-scrolling: touch;
-    
-    @media (max-width: 639px) {
-        padding: var(--modal-outer-padding-small);
-    }
+  }
 }
 .modal-inner {
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
 
-/* Modal window */
+/* !- Modal window */
 .modal-window {
-    position: relative;
-    z-index: 10030;
-    width: 100%;
-    max-width: 800px;
-    margin: auto;
+  position: relative;
+  z-index: 10030;
+  width: 100%;
+  max-width: 800px;
+  margin: auto;
+  padding: var(--modal-padding-small);
+  text-align: left;
+  background: var(--modal-background);
+  box-shadow: var(--modal-box-shadow);
+  border-radius: var(--modal-border-radius);
+  
+  @media (--medium) {
     padding: var(--modal-padding);
-    text-align: left;
+  }
+}
+
+
+/* !- Close cross */
+.modal-rail {
+  position: absolute;
+  top: 6px;
+  bottom: 6px;
+  right: 6px;
+  width: 0;
+  
+  .modal-close {
+    display: block;
+    position: sticky;
+    z-index: 10040;
+    top: 1px;
     background: var(--modal-background);
-    box-shadow: var(--modal-box-shadow);
+    width: var(--modal-closer-area);
+    height: var(--modal-closer-area);
+    margin-left: calc(-1 * var(--modal-closer-area));
+    font-weight: 200;
+    border: none;
     border-radius: var(--modal-border-radius);
     
-    @media (max-width: 639px) {
-        padding: var(--modal-padding-small);
-    }
-}
-
-
-/* Close cross */
-.modal-rail {
-    position: absolute;
-    top: 6px;
-    bottom: 6px;
-    right: 6px;
-    width: 0;
+    will-change: opacity;
+    opacity: 0;
+    transition: opacity .15s ease-out;
     
-    .modal-close {
-        display: block;
-        position: sticky;
-        z-index: 10040;
-        top: -50px;
-        width: var(--modal-closer-area);
-        height: var(--modal-closer-area);
-        margin-left: calc(-1 * var(--modal-closer-area));
-        font-weight: 200;
-        border: none;
-        border-radius: var(--modal-border-radius);
-        
-        will-change: opacity;
-        opacity: 0;
-        transition: opacity .15s ease-out;
-        
-        @media (max-width: 639px) {
-            top: 1px;
-            background: var(--modal-background);
-        }
-        
-        &:before,
-        &:after {
-            content: "";
-            display: block;
-            position: absolute;
-            top: calc(var(--modal-closer-area) / 2 - var(--modal-closer-width) / 2);
-            left: calc((var(--modal-closer-area) - var(--modal-closer-size)) / 2);
-            width: var(--modal-closer-size);
-            height: var(--modal-closer-width);
-            
-            will-change: color;
-            background: var(--modal-closer-color);
-            transition: background .15s ease-out;
-            transform-origin: center;
-        }
-        &:before {
-            transform: rotate(-45deg);
-        }
-        &:after {
-            transform: rotate(45deg);
-        }
+    @media (--medium) {
+      top: -50px;
+      background: none;
     }
+    
+    &:before,
+    &:after {
+      content: "";
+      display: block;
+      position: absolute;
+      top: calc(var(--modal-closer-area) / 2 - var(--modal-closer-width) / 2);
+      left: calc((var(--modal-closer-area) - var(--modal-closer-size)) / 2);
+      width: var(--modal-closer-size);
+      height: var(--modal-closer-width);
+      
+      will-change: color;
+      background: var(--modal-closer-color);
+      transition: background .15s ease-out;
+      transform-origin: center;
+    }
+    &:before {
+      transform: rotate(-45deg);
+    }
+    &:after {
+      transform: rotate(45deg);
+    }
+  }
 }
 .modal_active .modal-rail {
+  
+  .modal-close {
+    opacity: 1;
     
-    .modal-close {
-        opacity: 1;
-        
-        @media (hover: hover) {
-            &:hover:before,
-            &:hover:after,
-            &:active:before,
-            &:active:after {
-                background: var(--modal-closer-color-hover);
-            }
-        }
+    @media (hover: hover) {
+      &:hover:before,
+      &:hover:after,
+      &:active:before,
+      &:active:after {
+        background: var(--modal-closer-color-hover);
+      }
     }
+  }
 }
 
 
 
-/* Effects
+/* !- Effects
    https://github.com/codrops/ModalWindowEffects */
 
 
 .modal {
-    & .modal-overlay {
-        will-change: opacity;
-        opacity: 0;
-        transition: opacity .2s ease-out;
-    }
-    &.modal_active .modal-overlay {
-        opacity: 1;
-    }
+  & .modal-overlay {
+    will-change: opacity;
+    opacity: 0;
+    transition: opacity .2s ease-out;
+  }
+  &.modal_active .modal-overlay {
+    opacity: 1;
+  }
 }
 
-/* Default */
+/* !- Default */
 .modal {
-    & .modal-window {
-        will-change: visibility, opacity, transform;
-        opacity: 0;
-        transform: scale(.97);
-        transform-origin: center top;
-        transition: all .2s ease-out;
-    }
-    &.modal_active .modal-window {
-        transform: scale(1);
-        opacity: 1;
-    }
+  & .modal-window {
+    will-change: visibility, opacity, transform;
+    opacity: 0;
+    transform: scale(.97);
+    transform-origin: center top;
+    transition: all .2s ease-out;
+  }
+  &.modal_active .modal-window {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
 
-/* Zoom in */
+/* !- Zoom in */
 .modal_effect-in {
-    & .modal-window {
-        transform: scale(.9);
-    }
-    &.modal_active .modal-window {
-        transform: scale(1);
-    }
+  & .modal-window {
+    transform: scale(.9);
+  }
+  &.modal_active .modal-window {
+    transform: scale(1);
+  }
 }
 
-/* Zoom out */
+/* !- Zoom out */
 .modal_effect-out {
-    & .modal-window {
-        transform: scale(1.1);
-    }
-    &.modal_active .modal-window {
-        transform: scale(1);
-    }
+  & .modal-window {
+    transform: scale(1.1);
+  }
+  &.modal_active .modal-window {
+    transform: scale(1);
+  }
 }
 
-/* Slide up */
+/* !- Slide up */
 .modal_effect-up {
-    & .modal-window {
-        transform: translateY(30px);
-    }
-    &.modal_active .modal-window {
-        transform: translateY(0);
-    }
+  & .modal-window {
+    transform: translateY(30px);
+  }
+  &.modal_active .modal-window {
+    transform: translateY(0);
+  }
 }
 
-/* Slide down */
+/* !- Slide down */
 .modal_effect-down {
-    & .modal-window {
-        transform: translateY(-30px);
-    }
-    &.modal_active .modal-window {
-        transform: translateY(0);
-    }
+  & .modal-window {
+    transform: translateY(-30px);
+  }
+  &.modal_active .modal-window {
+    transform: translateY(0);
+  }
 }
 
-/* Slide from left */
+/* !- Slide from left */
 .modal_effect-left {
-    & .modal-window {
-        transform: translateX(-30px);
-    }
-    &.modal_active .modal-window {
-        transform: translateX(0);
-    }
+  & .modal-window {
+    transform: translateX(-30px);
+  }
+  &.modal_active .modal-window {
+    transform: translateX(0);
+  }
 }
 
-/* Slide from right */
+/* !- Slide from right */
 .modal_effect-right {
-    & .modal-window {
-        transform: translateX(30px);
-    }
-    &.modal_active .modal-window {
-        transform: translateX(0);
-    }
+  & .modal-window {
+    transform: translateX(30px);
+  }
+  &.modal_active .modal-window {
+    transform: translateX(0);
+  }
 }
